tests/errors/dollar.HC
//ERR: '$' (instruction address) is not supported
"%P\n",$;
